# cuttle

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Justfile  LICENSE  NOTICE  README.md  SKILL.md  THIRD-PARTY.md  flake.nix  go.mod  go.sum  lefthook.yml  pyproject.toml  release-please-config.json
.github/: .release-please-manifest.json  cliff.toml  release-please-config.json
.github/workflows/: build.yml  ci.yml  go-ci.yml  release.yml  smoke.yml
.playwright-cli/: page-2026-07-10T15-42-04-115Z.yml  page-2026-07-10T15-42-12-837Z.yml
cmd/cuttle/: main.go
cuttle/: __init__.py  browser.py  cli.py  config.py  download.py  geoip.py  view.py
docs/: 2607-17-native-macos-backend.md  BUILD-FROM-SOURCE.md  RELEASING.md  STEALTH-VERIFICATION.md  THIRD-PARTY.md  UPGRADE.md  UPSTREAM.md
docs/plans/: 2607-16-cuttle-go-rewrite.md  2607-21-cli-ux-overhaul.md  2607-23-arm64-widevine-spike.md  2607-23-self-hosted-chromium-build-pipeline.md
internal/atomicfile/: atomicfile.go
internal/backend/: backend.go  backend_test.go  direct.go  k8s.go  local.go  native.go  native_test.go  nativebin.go  runner.go  ssh.go  tunnel.go  tunnel_unix.go  tunnel_windows.go
internal/cdp/: cdp.go  cdp_test.go
internal/cli/: SKILL.md  briefing.go  briefing_test.go  commands.go  commands_test.go  drivers.go  mcp.go  root.go  skill.go  sync_test.go
internal/config/: config.go  config_test.go
internal/fingerprint/: args.go  binary.go  binary_test.go  geoip.go  geoip_test.go  golden_update_test.go  parity_test.go  proxy.go  pyurl.go
internal/fingerprint/testdata/: golden.json
internal/mcp/: mcp.go  mcp_test.go
internal/profile/: lock_test.go  profile.go  profile_test.go  session.go  session_test.go
internal/serve/: downloads.go  downloads_test.go  http.go  humanize.go  humanize_bench_test.go  humanize_click_test.go  humanize_integration_test.go  humanize_keyboard_test.go  humanize_scroll_test.go  humanize_test.go  keepalive.go  keepalive_test.go  pool.go  pool_test.go  serve.go  serve_test.go  state.go  state_test.go  supervise.go  wsproxy.go  wsproxy_test.go
internal/xdg/: xdg.go
ops/config/: goreleaser.yaml
ops/docker/: 50-block-linux-aliases.conf  Dockerfile  Dockerfile.dockerignore
ops/docker/winfonts/: README.md
ops/helm/cuttle/: .helmignore  Chart.yaml  values.yaml
ops/helm/cuttle/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  networkpolicy.yaml  pvc.yaml  service.yaml
scripts/: check-skill-version.py  make-null-font.py  rename-fonts.py  render-homebrew-formula.py  sync.sh
test/: README.md  harness.py
test/smoke/: main.go
winfonts/: README.md
