[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttle-browser"
version = "0.2.0"
description = "Stealth-Chromium CDP farm: per-seed browser fingerprints over a patched CDP multiplexer."
readme = "README.md"
license = { text = "MIT" }
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.30",
]
# Container-only: cuttleserve resolves geoip and talks to proxies via the
# vendored cloakbrowser.geoip (which imports these lazily). bin/cuttleserve is
# not part of the wheel, so the published CLI never reaches that code path -
# keeping these out of [project.dependencies] halves what pip/brew/nix install.
server = [
    "httpx>=0.27",
    "geoip2>=4.0",
    "socksio>=1.0",
]
# Build-time only: fonttools renames the Windows font pack during the image
# build (scripts/rename-fonts.py). Not a runtime dep and not a dev tool, so it
# gets its own group - the Dockerfile installs it from the lock, nothing else does.
build = [
    "fonttools>=4.0",
]

[project.scripts]
cuttle = "cuttle.cli:main"

[tool.setuptools]
packages = ["cloakbrowser", "cuttle"]

# The vendored upstream subset lives under vendor/ but must import as the
# upstream `cloakbrowser` package (so bin/cuttleserve's imports and vendor-sync
# diffs stay verbatim). `cuttle` is our authored package at the repo root.
[tool.setuptools.package-dir]
cloakbrowser = "vendor/cloakbrowser"
cuttle = "cuttle"

# Bundle SKILL.md into the wheel so `cuttle skill` works from a plain pip install
# (no repo present). The file is `cuttle/SKILL.md`, a symlink to the canonical
# root SKILL.md - the build resolves it to real content in the wheel.
[tool.setuptools.package-data]
cuttle = ["SKILL.md"]

# ruff/ty only touch AUTHORED code. vendor/cloakbrowser and bin/cuttleserve are
# vendored/patched from upstream cloakbrowser - reformatting or retyping them
# would break the "verbatim" provenance and blow up scripts/sync.sh diffs.
[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "E741", "UP007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.12"

# scripts/rename-fonts.py is a build-time script whose only import (fontTools) is
# installed in the image, not the project env; it gets ruff formatting but not
# type-checking. test/ and cuttle/ are the authored app code worth typing.
[tool.ty.src]
include = ["test", "cuttle"]
